ecmascript/parser/tests/test262-error-references/fail/2945f2ec8c9f3483.js.stderr
error: Unexpected character '#'
 --> $DIR/tests/test262-parser/fail/2945f2ec8c9f3483.js:1:3
  |
1 | i #= 42
  |   ^

